v/0.7.0/_sources/examples/03_ensemble_workflow.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/03_ensemble_workflow.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_03_ensemble_workflow.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_03_ensemble_workflow.py:


Running Ensemble Inference
==========================

Simple ensemble inference workflow.

This example will demonstrate how to run a simple inference workflow to generate a
ensemble forecast using one of the built in models of Earth-2 Inference
Studio.

In this example you will learn:

- How to instantiate a built in prognostic model
- Creating a data source and IO object
- Select a perturbation method
- Running a simple built in workflow for ensembling
- Post-processing results

.. GENERATED FROM PYTHON SOURCE LINES 38-43

Set Up
------
All workflows inside Earth2Studio require constructed components to be
handed to them. In this example, we will use the built in ensemble workflow
:py:meth:`earth2studio.run.ensemble`.

.. GENERATED FROM PYTHON SOURCE LINES 45-49

.. literalinclude:: ../../earth2studio/run.py
   :language: python
   :start-after: # sphinx - ensemble start
   :end-before: # sphinx - ensemble end

.. GENERATED FROM PYTHON SOURCE LINES 51-57

We need the following:

- Prognostic Model: Use the built in FourCastNet model :py:class:`earth2studio.models.px.FCN`.
- perturbation_method: Use the Spherical Gaussian Method :py:class:`earth2studio.perturbation.SphericalGaussian`.
- Datasource: Pull data from the GFS data api :py:class:`earth2studio.data.GFS`.
- IO Backend: Save the outputs into a Zarr store :py:class:`earth2studio.io.ZarrBackend`.

.. GENERATED FROM PYTHON SOURCE LINES 59-92

.. code-block:: Python

    import os

    os.makedirs("outputs", exist_ok=True)
    from dotenv import load_dotenv

    load_dotenv()  # TODO: make common example prep function

    import numpy as np

    from earth2studio.data import GFS
    from earth2studio.io import ZarrBackend
    from earth2studio.models.px import FCN
    from earth2studio.perturbation import SphericalGaussian
    from earth2studio.run import ensemble

    # Load the default model package which downloads the check point from NGC
    package = FCN.load_default_package()
    model = FCN.load_model(package)

    # Instantiate the pertubation method
    sg = SphericalGaussian(noise_amplitude=0.15)

    # Create the data source
    data = GFS()

    # Create the IO handler, store in memory
    chunks = {"ensemble": 1, "time": 1, "lead_time": 1}
    io = ZarrBackend(
        file_name="outputs/03_ensemble_sg.zarr",
        chunks=chunks,
        backend_kwargs={"overwrite": True},
    )








.. GENERATED FROM PYTHON SOURCE LINES 93-102

Execute the Workflow
--------------------
With all components initialized, running the workflow is a single line of Python code.
Workflow will return the provided IO object back to the user, which can be used to
then post process. Some have additional APIs that can be handy for post-processing or
saving to file. Check the API docs for more information.

For the forecast we will predict for 10 steps (for FCN, this is 60 hours) with 8 ensemble
members which will be ran in 2 batches with batch size 4.

.. GENERATED FROM PYTHON SOURCE LINES 104-120

.. code-block:: Python


    nsteps = 10
    nensemble = 8
    batch_size = 2
    io = ensemble(
        ["2024-01-01"],
        nsteps,
        nensemble,
        model,
        data,
        io,
        sg,
        batch_size=batch_size,
        output_coords={"variable": np.array(["t2m", "tcwv"])},
    )





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    2025-05-21 02:02:11.705 | INFO     | earth2studio.run:ensemble:315 - Running ensemble inference!
    2025-05-21 02:02:11.706 | INFO     | earth2studio.run:ensemble:323 - Inference device: cuda
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]                                                             2025-05-21 02:02:11.746 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20240101/00/atmos/gfs.t00z.pgrb2.0p25.f000 393705863-838502
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]                                                             2025-05-21 02:02:11.769 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20240101/00/atmos/gfs.t00z.pgrb2.0p25.f000 199934883-595444
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]                                                             2025-05-21 02:02:11.791 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20240101/00/atmos/gfs.t00z.pgrb2.0p25.f000 323061199-895080
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]                                                             2025-05-21 02:02:11.814 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20240101/00/atmos/gfs.t00z.pgrb2.0p25.f000 253514796-920355
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]                                                             2025-05-21 02:02:11.836 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20240101/00/atmos/gfs.t00z.pgrb2.0p25.f000 387322476-948106
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]                                                             2025-05-21 02:02:11.859 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20240101/00/atmos/gfs.t00z.pgrb2.0p25.f000 252556659-958137
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]                                                             2025-05-21 02:02:11.881 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20240101/00/atmos/gfs.t00z.pgrb2.0p25.f000 247857131-804857
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]                                                             2025-05-21 02:02:11.903 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20240101/00/atmos/gfs.t00z.pgrb2.0p25.f000 246334297-805355
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]                                                             2025-05-21 02:02:11.925 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20240101/00/atmos/gfs.t00z.pgrb2.0p25.f000 194463909-743465
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]                                                             2025-05-21 02:02:11.947 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20240101/00/atmos/gfs.t00z.pgrb2.0p25.f000 193737151-726758
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]                                                             2025-05-21 02:02:11.969 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20240101/00/atmos/gfs.t00z.pgrb2.0p25.f000 391722290-987401
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]                                                             2025-05-21 02:02:11.991 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20240101/00/atmos/gfs.t00z.pgrb2.0p25.f000 452597070-961302
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]                                                             2025-05-21 02:02:12.013 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20240101/00/atmos/gfs.t00z.pgrb2.0p25.f000 402321768-876246
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]                                                             2025-05-21 02:02:12.035 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20240101/00/atmos/gfs.t00z.pgrb2.0p25.f000 199346060-588823
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]                                                             2025-05-21 02:02:12.056 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20240101/00/atmos/gfs.t00z.pgrb2.0p25.f000 324794050-867372
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]                                                             2025-05-21 02:02:12.079 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20240101/00/atmos/gfs.t00z.pgrb2.0p25.f000 330670600-938837
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]                                                             2025-05-21 02:02:12.101 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20240101/00/atmos/gfs.t00z.pgrb2.0p25.f000 323956279-837771
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]                                                             2025-05-21 02:02:12.123 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20240101/00/atmos/gfs.t00z.pgrb2.0p25.f000 329739828-930772
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]                                                             2025-05-21 02:02:12.145 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20240101/00/atmos/gfs.t00z.pgrb2.0p25.f000 414179964-1179422
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]                                                             2025-05-21 02:02:12.168 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20240101/00/atmos/gfs.t00z.pgrb2.0p25.f000 386359113-963363
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]                                                             2025-05-21 02:02:12.190 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20240101/00/atmos/gfs.t00z.pgrb2.0p25.f000 0-993995
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]                                                             2025-05-21 02:02:12.211 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20240101/00/atmos/gfs.t00z.pgrb2.0p25.f000 406629528-962408
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]                                                             2025-05-21 02:02:12.233 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20240101/00/atmos/gfs.t00z.pgrb2.0p25.f000 143527711-755695
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]                                                             2025-05-21 02:02:12.255 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20240101/00/atmos/gfs.t00z.pgrb2.0p25.f000 247139652-717479
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]                                                             2025-05-21 02:02:12.277 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20240101/00/atmos/gfs.t00z.pgrb2.0p25.f000 407591936-940269
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]                                                             2025-05-21 02:02:12.299 | DEBUG    | earth2studio.data.gfs:fetch_array:354 - Fetching GFS grib file: noaa-gfs-bdp-pds/gfs.20240101/00/atmos/gfs.t00z.pgrb2.0p25.f000 451628742-968328
    Fetching GFS data:   0%|          | 0/26 [00:00<?, ?it/s]    Fetching GFS data:   4%|▍         | 1/26 [00:00<00:14,  1.74it/s]    Fetching GFS data: 100%|██████████| 26/26 [00:00<00:00, 45.26it/s]
    2025-05-21 02:02:12.378 | SUCCESS  | earth2studio.run:ensemble:345 - Fetched data from GFS
    2025-05-21 02:02:12.385 | WARNING  | earth2studio.io.zarr:add_array:192 - Datetime64 not supported in zarr 3.0, converting to int64 nanoseconds since epoch
    2025-05-21 02:02:12.387 | WARNING  | earth2studio.io.zarr:add_array:198 - Timedelta64 not supported in zarr 3.0, converting to int64 nanoseconds since epoch
    2025-05-21 02:02:12.400 | INFO     | earth2studio.run:ensemble:373 - Starting 8 Member Ensemble Inference with             4 number of batches.


    Total Ensemble Batches:   0%|          | 0/4 [00:00<?, ?it/s]
    Running batch 0 inference:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 0 inference:   9%|▉         | 1/11 [00:00<00:03,  2.90it/s]
    Running batch 0 inference:  18%|█▊        | 2/11 [00:00<00:03,  2.30it/s]
    Running batch 0 inference:  27%|██▋       | 3/11 [00:01<00:03,  2.24it/s]
    Running batch 0 inference:  36%|███▋      | 4/11 [00:01<00:03,  2.19it/s]
    Running batch 0 inference:  45%|████▌     | 5/11 [00:02<00:02,  2.16it/s]
    Running batch 0 inference:  55%|█████▍    | 6/11 [00:02<00:02,  2.14it/s]
    Running batch 0 inference:  64%|██████▎   | 7/11 [00:03<00:01,  2.13it/s]
    Running batch 0 inference:  73%|███████▎  | 8/11 [00:03<00:01,  2.13it/s]
    Running batch 0 inference:  82%|████████▏ | 9/11 [00:04<00:00,  2.11it/s]
    Running batch 0 inference:  91%|█████████ | 10/11 [00:04<00:00,  2.09it/s]
    Running batch 0 inference: 100%|██████████| 11/11 [00:05<00:00,  2.10it/s]
                                                                              

    Total Ensemble Batches:  25%|██▌       | 1/4 [00:09<00:27,  9.15s/it]
    Running batch 2 inference:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 2 inference:   9%|▉         | 1/11 [00:00<00:02,  3.47it/s]
    Running batch 2 inference:  18%|█▊        | 2/11 [00:00<00:03,  2.55it/s]
    Running batch 2 inference:  27%|██▋       | 3/11 [00:01<00:03,  2.33it/s]
    Running batch 2 inference:  36%|███▋      | 4/11 [00:01<00:03,  2.26it/s]
    Running batch 2 inference:  45%|████▌     | 5/11 [00:02<00:02,  2.23it/s]
    Running batch 2 inference:  55%|█████▍    | 6/11 [00:02<00:02,  2.19it/s]
    Running batch 2 inference:  64%|██████▎   | 7/11 [00:03<00:01,  2.20it/s]
    Running batch 2 inference:  73%|███████▎  | 8/11 [00:03<00:01,  2.16it/s]
    Running batch 2 inference:  82%|████████▏ | 9/11 [00:04<00:00,  2.14it/s]
    Running batch 2 inference:  91%|█████████ | 10/11 [00:04<00:00,  2.13it/s]
    Running batch 2 inference: 100%|██████████| 11/11 [00:04<00:00,  2.15it/s]
                                                                              

    Total Ensemble Batches:  50%|█████     | 2/4 [00:17<00:17,  8.78s/it]
    Running batch 4 inference:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 4 inference:   9%|▉         | 1/11 [00:00<00:03,  3.10it/s]
    Running batch 4 inference:  18%|█▊        | 2/11 [00:00<00:03,  2.51it/s]
    Running batch 4 inference:  27%|██▋       | 3/11 [00:01<00:03,  2.29it/s]
    Running batch 4 inference:  36%|███▋      | 4/11 [00:01<00:03,  2.22it/s]
    Running batch 4 inference:  45%|████▌     | 5/11 [00:02<00:02,  2.22it/s]
    Running batch 4 inference:  55%|█████▍    | 6/11 [00:02<00:02,  2.23it/s]
    Running batch 4 inference:  64%|██████▎   | 7/11 [00:03<00:01,  2.17it/s]
    Running batch 4 inference:  73%|███████▎  | 8/11 [00:03<00:01,  2.15it/s]
    Running batch 4 inference:  82%|████████▏ | 9/11 [00:04<00:00,  2.18it/s]
    Running batch 4 inference:  91%|█████████ | 10/11 [00:04<00:00,  2.18it/s]
    Running batch 4 inference: 100%|██████████| 11/11 [00:04<00:00,  2.16it/s]
                                                                              

    Total Ensemble Batches:  75%|███████▌  | 3/4 [00:26<00:08,  8.66s/it]
    Running batch 6 inference:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 6 inference:   9%|▉         | 1/11 [00:00<00:03,  3.20it/s]
    Running batch 6 inference:  18%|█▊        | 2/11 [00:00<00:03,  2.47it/s]
    Running batch 6 inference:  27%|██▋       | 3/11 [00:01<00:03,  2.27it/s]
    Running batch 6 inference:  36%|███▋      | 4/11 [00:01<00:03,  2.19it/s]
    Running batch 6 inference:  45%|████▌     | 5/11 [00:02<00:02,  2.15it/s]
    Running batch 6 inference:  55%|█████▍    | 6/11 [00:02<00:02,  2.14it/s]
    Running batch 6 inference:  64%|██████▎   | 7/11 [00:03<00:01,  2.13it/s]
    Running batch 6 inference:  73%|███████▎  | 8/11 [00:03<00:01,  2.13it/s]
    Running batch 6 inference:  82%|████████▏ | 9/11 [00:04<00:00,  2.12it/s]
    Running batch 6 inference:  91%|█████████ | 10/11 [00:04<00:00,  2.13it/s]
    Running batch 6 inference: 100%|██████████| 11/11 [00:05<00:00,  2.15it/s]
                                                                              

    Total Ensemble Batches: 100%|██████████| 4/4 [00:34<00:00,  8.61s/it]    Total Ensemble Batches: 100%|██████████| 4/4 [00:34<00:00,  8.68s/it]
    2025-05-21 02:02:47.130 | SUCCESS  | earth2studio.run:ensemble:423 - Inference complete




.. GENERATED FROM PYTHON SOURCE LINES 121-127

Post Processing
---------------
The last step is to post process our results. Cartopy is a great library for plotting
fields on projections of a sphere.

Notice that the Zarr IO function has additional APIs to interact with the stored data.

.. GENERATED FROM PYTHON SOURCE LINES 129-185

.. code-block:: Python

    import cartopy.crs as ccrs
    import matplotlib.pyplot as plt

    forecast = "2024-01-01"


    def plot_(axi, data, title, cmap):
        """Convenience function for plotting pcolormesh."""
        # Plot the field using pcolormesh
        im = axi.pcolormesh(
            io["lon"][:],
            io["lat"][:],
            data,
            transform=ccrs.PlateCarree(),
            cmap=cmap,
        )
        plt.colorbar(im, ax=axi, shrink=0.6, pad=0.04)
        # Set title
        axi.set_title(title)
        # Add coastlines and gridlines
        axi.coastlines()
        axi.gridlines()


    for variable, cmap in zip(["tcwv"], ["Blues"]):
        step = 4  # lead time = 24 hrs

        plt.close("all")
        # Create a Robinson projection
        projection = ccrs.Robinson()

        # Create a figure and axes with the specified projection
        fig, (ax1, ax2, ax3) = plt.subplots(
            nrows=1, ncols=3, subplot_kw={"projection": projection}, figsize=(16, 3)
        )

        plot_(
            ax1,
            io[variable][0, 0, step],
            f"{forecast} - Lead time: {6*step}hrs - Member: {0}",
            cmap,
        )
        plot_(
            ax2,
            io[variable][1, 0, step],
            f"{forecast} - Lead time: {6*step}hrs - Member: {1}",
            cmap,
        )
        plot_(
            ax3,
            np.std(io[variable][:, 0, step], axis=0),
            f"{forecast} - Lead time: {6*step}hrs - Std",
            cmap,
        )

        plt.savefig(f"outputs/03_{forecast}_{variable}_{step}_ensemble.jpg")



.. image-sg:: /examples/images/sphx_glr_03_ensemble_workflow_001.png
   :alt: 2024-01-01 - Lead time: 24hrs - Member: 0, 2024-01-01 - Lead time: 24hrs - Member: 1, 2024-01-01 - Lead time: 24hrs - Std
   :srcset: /examples/images/sphx_glr_03_ensemble_workflow_001.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (1 minutes 23.630 seconds)


.. _sphx_glr_download_examples_03_ensemble_workflow.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 03_ensemble_workflow.ipynb <03_ensemble_workflow.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 03_ensemble_workflow.py <03_ensemble_workflow.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: 03_ensemble_workflow.zip <03_ensemble_workflow.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
